--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9254,6 +9254,7 @@ button:disabled {
   color: white;
 }
 .header__intro {
+  max-width: -webkit-fill-available;
   overflow: hidden;
   height: 100vh;
   width: 98vw;
@@ -9272,8 +9273,8 @@ button:disabled {
 }
 .header__intro-content-wrapper {
   position: absolute;
-  height: inherit;
-  width: inherit;
+  height: -webkit-fill-available;
+  width: -webkit-fill-available;
   top: 0;
   display: flex;
   align-items: center;
